[package]
name = "phd"
version = "0.1.6-dev"
authors = ["dvkt <c@dvkt.io>"]
license = "MIT"
edition = "2018"
description = "an esoteric gopher server"
readme = "README.md"
repository = "https://github.com/dvkt/phd"
keywords = ["gopher", "server", "daemon"]
exclude = [
    "img/*"
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'  # Optimize for size.

[dependencies]
content_inspector = "0.2.4"
threadpool = "1.7.1"
gophermap = "0.1.2"

[package.metadata.release]
pre-release-replacements = [
  {file="README.md", search="phd-v\\d\\.\\d\\.\\d-", replace="{{crate_name}}-v{{version}}-"},
  {file="README.md", search="/v\\d\\.\\d\\.\\d/", replace="/v{{version}}/"},
]
dev-version-ext = "dev"

