[package]
name = "phd"
version = "0.1.9"
authors = ["chris west <c@xvxx.io>"]
license = "MIT"
edition = "2018"
description = "an esoteric gopher server"
readme = "README.md"
repository = "https://github.com/xvxx/phd"
keywords = ["gopher", "server", "daemon"]
exclude = [
    "img/*"
]

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
opt-level = 'z'  # Optimize for size.

[package.metadata.release]
pre-release-replacements = [
  {file="README.md", search="phd-v\\d+\\.\\d+\\.\\d+-", replace="{{crate_name}}-v{{version}}-"},
  {file="README.md", search="/v\\d+\\.\\d+\\.\\d+/", replace="/v{{version}}/"},
]
dev-version-ext = "dev"

[dependencies]
content_inspector = "0.2.4"
threadpool = "1.7.1"
gophermap = "0.1.2"
alphanumeric-sort = "1.0.11"
shell-escape = "0.1.4"
